# pokemon-showdown-bot

./: .gitignore  README.md  agentest.py  battle_log.txt  private_keys.json  pyproject.toml  watch_replays.py
frontend/: content.js  manifest.json  popup.html  popup.js
